[metadata]
name = ramlfications
description-file = README.md
author = Lynn Root
version = 0.1.0
author-email = lynn@spotify.com
summary = A Python RAML Parser
home-page = https://github.com/spotify/ramlfications
classifier =
    Development Status :: 4 - Beta
    License :: Freely Distributable
    License :: Public Domain
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Developers
    Environment :: Console


[files]
packages =
    ramlfications


[build_sphinx]
all_files = 1
build-dir = docs/_build
source-dir = docs/

[wheel]
universal = 1

[pytest]
minversion = 2.6
strict = true
norecursedirs = .* build dist test_data *.egg
